--- a/ProjectPortfolio/ProjectPortfolio.csproj
+++ b/ProjectPortfolio/ProjectPortfolio.csproj
@@ -86,7 +86,6 @@
     <Content Include="Web.config" />
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
-    <Content Include="Scripts\Javascript.js" />
     <Content Include="Images\imgHomerError.png" />
     <Content Include="Images\imgMulhallFamilyCrest.png" />
     <Content Include="Images\imgShareFacebook.png" />
@@ -101,6 +100,7 @@
     <Content Include="Views\IrishTechNews\Index.cshtml" />
     <Content Include="Views\Resume\Index.cshtml" />
     <Content Include="Views\About\Index.cshtml" />
+    <Content Include="Scripts\JSSFile.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\favicon.ico" />
