23rd Commit - Completed About John View

--- a/ProjectPortfolio/ProjectPortfolio.csproj
+++ b/ProjectPortfolio/ProjectPortfolio.csproj
@@ -125,6 +125,7 @@
     <Content Include="Images\imgLogoMySQL.png" />
     <Content Include="Images\imgLogoPostgreSQL.png" />
     <Content Include="Images\imgLogoTypeScript.png" />
+    <Content Include="Images\imgMeGrad94.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\favicon.ico" />
