--- a/ProjectPortfolio/ProjectPortfolio.csproj
+++ b/ProjectPortfolio/ProjectPortfolio.csproj
@@ -64,6 +64,7 @@
     <Folder Include="Content\" />
     <Folder Include="Models\" />
     <Folder Include="Scripts\" />
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -76,6 +77,9 @@
     <Compile Include="Controllers\ResumeController.cs" />
     <Compile Include="Controllers\IrishTechNewsController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
+    <Compile Include="Models\CountryList.cs" />
+    <Compile Include="Models\ContactType.cs" />
+    <Compile Include="Controllers\ContactProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
@@ -127,6 +131,7 @@
     <Content Include="Images\imgMeGrad94.png" />
     <Content Include="Images\imgLogoPython.png" />
     <Content Include="Images\imgLogoASPNETMVC.png" />
+    <Content Include="Views\Contact\SubmitEntry.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\favicon.ico" />
